tests/macros/float/page_size.rs
fn main() {
    requestty::questions![Float { page_size: todo!() }];
}
